Apache Libraries Updated